--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
   <modules>
     <module>parent</module>
+    <module>gw-asm-all</module>
     <module>gw-asm-util</module>
     <module>gw-commons-cli</module>
     <module>gw-xercesImpl</module>
