--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
     <module>parent</module>
     <module>gw-asm-all</module>
+    <module>gw-asm-debug-all</module>
     <module>gw-asm-util</module>
     <module>gw-commons-cli</module>
     <module>gw-xercesImpl</module>
