Upgrade asm version to 9.2 also commons-cli version to 1.4

--- a/gw-jcommander/pom.xml
+++ b/gw-jcommander/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.beust</groupId>
       <artifactId>jcommander</artifactId>
-      <version>1.72</version>
+      <version>${jcommander.version}</version>
     </dependency>
   </dependencies>
 
