--- a/gw-asm-util/pom.xml
+++ b/gw-asm-util/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>gw-asm-util</artifactId>
-  <version>7.0</version>
+  <version>9.2</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm-util</artifactId>
-      <version>7.0</version>
+      <version>${asm.version}</version>
     </dependency>
   </dependencies>
 
