--- a/gw-commons-cli/pom.xml
+++ b/gw-commons-cli/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>gw-commons-cli</artifactId>
-  <version>1.2-1</version>
+  <version>1.4</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.2</version>
+      <version>${common-cli.version}</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
