--- a/gw-xercesImpl/pom.xml
+++ b/gw-xercesImpl/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
-      <version>2.11.0</version>
+      <version>${xercesImpl.Version}</version>
     </dependency>
   </dependencies>
 
