--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -35,6 +35,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <asm.version>9.2</asm.version>
+    <common-cli.version>1.4</common-cli.version>
+    <jcommander.version>1.72</jcommander.version>
+    <xercesImpl.Version>2.11.0</xercesImpl.Version>
   </properties>
 
   <distributionManagement>
@@ -53,7 +59,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
