--- a/gw-gson/pom.xml
+++ b/gw-gson/pom.xml
@@ -3,7 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>gw-gson</artifactId>
-  <version>${gson.version}</version>
+  <version>2.13.1</version>
+  <name>GW Gson</name>
   <packaging>jar</packaging>
 
   <parent>
@@ -17,7 +18,7 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>${gson.version}</version>
+      <version>2.13.1</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.errorprone</groupId>
