--- a/gw-jcommander/pom.xml
+++ b/gw-jcommander/pom.xml
@@ -3,8 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>gw-jcommander</artifactId>
-  <version>1.78</version>
+  <version>1.82</version>
   <packaging>jar</packaging>
+  <name>gw-jcommander</name>
 
   <parent>
     <groupId>org.gosu-lang.gosu.managed</groupId>
@@ -26,7 +27,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.1</version>
+        <version>3.5.1</version>
         <executions>
           <execution>
             <phase>package</phase>
