--- a/gw-asm-all/pom.xml
+++ b/gw-asm-all/pom.xml
@@ -3,8 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>gw-asm-all</artifactId>
-  <version>9.7</version>
+  <version>9.8</version>
   <packaging>jar</packaging>
+  <name>gw-asm-all</name>
 
   <parent>
     <groupId>org.gosu-lang.gosu.managed</groupId>
@@ -46,7 +47,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.4.1</version>
+        <version>3.5.1</version>
         <executions>
           <execution>
             <phase>package</phase>
